--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ h2 {
 input[type="text"],
 input[type="password"] {
     width: 100%;
-    padding: 10px 0;
+    padding: 10px 10px;
     margin: 10px 0;
     border: none;
     border-radius: 25px;
