--- a/principal.css
+++ b/principal.css
@@ -1,26 +1,34 @@
+*, ::before, ::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: inherit;
+}
+
+html {
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: white;
+    width: 100%;
+    height: 100vh;
 }
 
 nav {
     background-color: red;
     color: white;
     text-align: center;
-    padding: 0.5rem;
+    padding: 1.5rem 0 ;
 }
 
 main {
-    display: flex;
-    max-width: 125px;
-    margin-left: 10px;
-    margin-top: 10px;
-    background-color: white;
-    padding: 10px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 2);
-    border-radius: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(0%, 1fr));
+    justify-content: center;
+    align-items: center;
+    height: calc(100% - 75px);
 }
 
 label {
@@ -39,22 +47,31 @@ textarea {
 }
 
 #tables-container {
-    width: 70%;
-    text-align: center;
-}
-
-#form-container {
-    width: 30%;
-    background-color: #f9f9f9;
-    padding: 1rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    display: none;
+    width: 100%;
+    height: 100%;
+}
+
+.tables > h2 {
+    padding: 1.5rem 0;
+    margin: 0 auto 2rem;
+}
+
+#form-container {
+    width: 100%;
+    height: 100%;
+    /* background-color: #f9f9f9; */
+    background-color: rgba(37, 148, 37, 0.356);
+    padding: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .table {
@@ -62,13 +79,17 @@ textarea {
     width: 100px;
     height: 100px;
     background-color: white;
-    border: 1px solid #ccc;
+    border: 1px solid #333;
     border-radius: 25px;
-    margin: 0 10px 10px 0;
+    margin: 0 .8rem;
     padding: 10px;
     cursor: pointer;
     box-shadow: 0 0 5px rgba(0, 0, 0, 2);
     text-align: center;
+}
+
+.active-table {
+    background-color: rgb(121, 223, 157);
 }
 
 .table .table-number {
@@ -85,7 +106,6 @@ textarea {
     padding: 0.5rem 1rem;
     cursor: pointer;
     box-shadow: 0 0 5px rgba(0, 0, 0, 2);
-    margin-top: 10px;
 }
 
 .table .open-table-button:hover {
@@ -93,15 +113,26 @@ textarea {
 }
 
 .open-table-form {
-    background-color: #f9f9f9;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
     padding: 1rem;
-    border: 1px solid #ddd;
     border-radius: 4px;
     margin-top: 10px;
+    display: none;
+}
+
+.open-table-form > h3 {
+    font-size: 1.8rem;
+}
+
+.form-group {
+    margin: 2rem 0;
+}
+
+.form-group-submit {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
 }
 
 .open-table-form button {
@@ -112,11 +143,11 @@ textarea {
     padding: 0.5rem 1rem;
     cursor: pointer;
     box-shadow: 0 0 5px rgba(0, 0, 0, 2);
-    margin-top: 10px;
+    margin: 0 auto;
 }
 
 .open-table-form button:hover {
-    background-color: green;
+    background-color: rgb(40, 147, 209);
 }
 
 .open-table-form h3 {
@@ -125,4 +156,99 @@ textarea {
 
 .hidden {
     display: none;
+}
+
+
+
+
+/* TEMPLATE */
+
+.template__container {
+    width: 100%;
+}
+
+.order__template {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.order__info {
+    margin: 2rem auto;
+}
+
+.order__add > h3 {
+    background-color: #ccc;
+    padding: .5rem 1rem;
+}
+
+.form__order {
+    display: flex;
+    padding: 1rem;
+    background-color: #ddd;
+}
+
+.form__order > input {
+    outline: none;
+}
+
+.form__order > button {
+    width: 45px;
+    margin-left: 1rem;
+    cursor: pointer;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: #ddd;
+}
+
+.list__product {
+    display: flex;
+    justify-content: space-between;
+}
+
+.list__product > div {
+    display: flex;
+    column-gap: 1rem;
+    padding: 1rem;
+}
+
+.list__total {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    background-color: #444;
+    color: #fff;
+}
+
+.order__terminar {
+    width: 300px;
+    padding: 1rem;
+    margin: 0 auto;
+    margin-top: 1rem;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.order__terminar:hover {
+    background-color: #fff;
+}
+
+.order__created {
+    background-color: red;
+}
+
+@media (max-width: 860px) {
+    main {
+        grid-template-columns: repeat(1, minmax(0%, 1fr));
+    }
+    #tables-container {
+        margin-bottom: 4rem;
+    }
 }
