--- a/principal.css
+++ b/principal.css
@@ -51,7 +51,6 @@ textarea {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
     height: 100%;
 }
 
@@ -80,7 +79,7 @@ textarea {
     background-color: white;
     border: 1px solid #333;
     border-radius: 25px;
-    margin: 0 .8rem;
+    margin: 1rem .8rem;
     padding: 10px;
     cursor: pointer;
     box-shadow: 0 0 5px rgba(0, 0, 0, 2);
@@ -243,23 +242,47 @@ textarea {
         grid-template-columns: repeat(1, minmax(0%, 1fr));
     }
     #tables-container {
-        margin-bottom: 4rem;
+        padding-bottom: 2rem;
     }
 }
 
 .navbar {
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 0.6rem;
     background-color: black;
     color: white;
 }
 
+.navbar-menu {
+    display: none;
+    width: 30px;
+    height: 30px;
+    margin: 0 .5rem;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.navbar-menu > img {
+    width: 100%;
+    object-fit: contain;
+}
+
 .navbar-icon {
     font-size: 24px;
-    margin-right: 1rem;
+    margin: 1rem;
     cursor: pointer;
+}
+
+.navbar-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 900px;
+    padding: 0 2rem;
 }
 
 .navbar-date,
@@ -288,6 +311,7 @@ textarea {
     width: 100%;
     background-color: black;
     padding: 0.2rem;
+    z-index: 2;
 }
 
 .area-button {
@@ -300,4 +324,42 @@ textarea {
     border: none;
     background-color: black;
     color: white;
+}
+
+
+@media (max-width: 700px) {
+    .navbar {
+        justify-content: space-between;
+    }
+    .navbar-menu {
+        display: flex;
+    }
+
+    .navbar-content {
+        position: absolute;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        row-gap: 1rem;
+        top: -300px;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        min-height: 300px;
+        padding: 2rem 1rem;
+        background-color: #000;
+        transition: top 500ms ease;
+    }
+
+    .navbar-content.menu-active {
+        top: 0;
+    }
+
+    .navbar-date {
+        text-align: end;
+    }
+
+    .navbar-time {
+        margin-top: 2rem;
+    }
 }
